--- a/style.css
+++ b/style.css
@@ -7,3 +7,99 @@ body{
     background-attachment: fixed;
     
 }
+
+
+.animation-main{
+    animation: section-animate both;
+    animation-timeline: view();
+    animation-range: entry 20% cover 100vh;
+}
+
+@keyframes section-animate {
+
+    from{
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+    
+}
+
+
+.fade-up{
+    animation: fadeUP both;
+    animation-timeline: view();
+     animation-range: entry 20% cover 40%;
+}
+
+
+@keyframes fadeUP {
+    from{
+        opacity: 0;
+        transform: translateY(10px) scale(0.5);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0) scale(1);
+    }
+}
+
+
+
+
+
+.hero-section::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+   
+    z-index: 1;
+}
+
+/* Animations */
+.navbar-animation {
+    opacity: 0;
+    transform: translateY(-20px);
+    animation: slideInFromTop 0.8s ease-out forwards;
+}
+
+.hero-element-animation {
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+.hero-element-animation.heading {
+    animation: fadeInSlideUp 1s ease-out 0.8s forwards;
+}
+
+.hero-element-animation.subheading {
+    animation: fadeInSlideUp 1s ease-out 1.2s forwards;
+}
+
+@keyframes fadeInSlideUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideInFromTop {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
