--- a/style.css
+++ b/style.css
@@ -18,11 +18,11 @@ body{
 @keyframes section-animate {
 
     from{
-        opacity: 0;
+        /* opacity: 0; */
         transform: translateY(100px);
     }
     to{
-        opacity: 1;
+        /* opacity: 1; */
         transform: translateY(0);
     }
     
